# emperor-core

./: .gitignore  README.md  pyproject.toml  smoke_workflow.py
jarvis/: alerts.py  approval.py  audit.py  capability.py  cli.py  config.py  context_versioning.py  court_api.py  dashboard_html.py  database.py  emperor.py  emperor_cli.py  eval.py  event_bus.py  health.py  main.py  plugin.py
jarvis/api/: server.py
jarvis/codex/: __init__.py  analyzer.py  engine.py  generator.py
tests/: call_00_0caKQhGjhM8FpS8ilNKq2608.txt  call_00_2mt5ilHzGHw9KxZhyy3p9717.txt  call_00_3PTyNTlbaZDwMqvTbDdF8310.txt  call_00_5xONQpAMPl942TBVFHTJ7120.txt  call_00_BfNjL5JZAv7dYljpahwU9498.txt  call_00_Eq40tWvYByV5ibQuuMTC8202.txt  call_00_QUqEqM27i3nI2YmTSDir4713.txt  call_00_kHB2I1e0hahJS6FV0kaV1183.txt  call_00_otLxcWWrfwbahzrpo4ny6454.txt  call_00_pNhPcWML4uKBewvE9Zy38786.txt  call_01_Dc5Mj5BoDHTHVT51tHCG5382.txt  call_01_nla1CnONBzuK3tfFq20B4946.txt  call_02_0OvfK8xpNohZL6BMIDwe8716.txt  call_02_7Z5dyKhzBrHa2pMFBrAD6078.txt  test_adaptive_evolution_rate.py  test_alerts_integration.py  test_approval.py  test_builtin_alerts.py  test_builtin_plugins.py  test_calibration.py  test_capability.py  test_censorate.py  test_cli.py  test_codex.py  test_config.py  test_context_versioning.py  test_court.py  test_court_api.py  test_court_facade.py  test_court_integration.py  test_court_kg.py  test_court_orchestration.py  test_database.py  test_domains.py  test_emperor.py  test_emperor_auto_start.py  test_emperor_builtin_plugins.py  test_emperor_plugins.py  test_event_bus.py  test_events.py  (+24 more)
(+58 files in other folders)
