[project]
name = "emperor-core"
version = "0.1.0"
description = "Emperor — Imperial Court AI Orchestrator. Multi-domain autonomous AI system with eight specialized minister agents."
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "langchain>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "docker>=7.0.0",
    "gitpython>=3.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
    "pyautogui>=0.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "textgrad>=0.1.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
jarvis = "jarvis.cli:main"
emperor = "jarvis.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
markers = [
    "network: tests that require real network access (may be skipped in CI)",
]
